# ferrit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
design/: Example.fe  design.md  ferrit.grammar
fe_test/: FunctionDeclarations.fe
src/: AstElements.cpp  AstElements.h  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  CompileOptions.cpp  CompileOptions.h  Error.cpp  Error.h  ErrorReporter.cpp  ErrorReporter.h  ErrorReporting.cpp  ErrorReporting.h  Expression.cpp  Expression.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  ParseError.cpp  ParseError.h  Parser.cpp  Parser.h  ResultTry.h  Statement.cpp  Statement.h  Token.cpp  Token.h  Visitor.h  main.cpp
src/vm/: BytecodeCompiler.cpp  BytecodeCompiler.h  BytecodeInterpreter.cpp  BytecodeInterpreter.h  Chunk.cpp  Chunk.h  CompileError.cpp  CompileError.h  Disassembler.cpp  Disassembler.h  NativeHandler.cpp  NativeHandler.h  RuntimeType.cpp  RuntimeType.h  Value.cpp  Value.h  VirtualMachine.cpp  VirtualMachine.h
test/: CMakeLists.txt  IntegrationTests.cpp  TestLexer.cpp  TestParser.cpp
test/vm/: TestChunk.cpp  TestVm.cpp
